[tool.black]                                     # 코드 포매터 Black의 설정
line-length = 88                                 # 한 줄에 허용되는 최대 문자 수


[build-system]                                   # 빌드 시스템 설정
requires = ["setuptools>=61.0"]                  # 빌드에 필요한 패키지
build-backend = "setuptools.build_meta"          # setuptools를 빌드 백엔드로 사용


[project]                                        # 프로젝트 메타데이터
name = "hello"                                   # 패키지 이름
version = "0.1.0"                                # 버전
description = "A simple hello package"           # 간단한 설명
authors = [  # 작성자 정보
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"                             # README 파일 경로
license = { text = "MIT" }                       # 라이선스 정보
requires-python = ">=3.8"                        # 지원하는 최소 파이썬 버전
dependencies = []                                # 의존 패키지 목록


[tool.setuptools.packages.find]                  # 패키지 탐색 설정
where = ["src"]                                  # src 디렉토리 안에서 패키지를 찾음
